# card-collector

./: README.md  pyproject.toml
src/: run.py
src/card_collector/: __init__.py  config.py  routes.py
src/card_collector/utils/: map_cards.py
